[REF] Limiting RSS to 1 entry.

--- a/workflows/rss-candyshop.yml
+++ b/workflows/rss-candyshop.yml
@@ -1,6 +1,8 @@
 on:
   rss:
     url: https://github.com/LuisAlejandro/candyshop/releases.atom
+    config:
+      limit: 
 jobs:
   candyshop:
     name: Publish Candyshop new versions
