--- a/workflows/rss-pipsalabim.yml
+++ b/workflows/rss-pipsalabim.yml
@@ -1,6 +1,8 @@
 on:
   rss:
     url: https://github.com/LuisAlejandro/pipsalabim/releases.atom
+    config:
+      limit: 1
 jobs:
   pipsalabim:
     name: Publish new Pip Sala Bim versions
