--- a/workflows/rss-pypicontents.yml
+++ b/workflows/rss-pypicontents.yml
@@ -1,6 +1,8 @@
 on:
   rss:
     url: https://github.com/LuisAlejandro/pypicontents/releases.atom
+    config:
+      limit: 1
 jobs:
   pypicontents:
     name: Publish new PyPIContents versions
