--- a/workflows/rss-candyshop.yml
+++ b/workflows/rss-candyshop.yml
@@ -4,16 +4,25 @@ on:
     config:
       limit: 1
 jobs:
-  candyshop:
-    name: Publish Candyshop new versions
+  send-tweet-with-media:
+    name: Tweet new Candyshop versions
     runs-on: ubuntu-20.04
     steps:
-      - name: Post tweet
-        uses: LuisAlejandro/send-tweet-with-media@0.2.0
+      - uses: LuisAlejandro/send-tweet-with-media@0.2.0
         env:
           TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
           TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           TWITTER_OAUTH_TOKEN: ${{ secrets.TWITTER_OAUTH_TOKEN }}
           TWITTER_OAUTH_SECRET: ${{ secrets.TWITTER_OAUTH_SECRET }}
+          STATUS_TEXT: "${{ on.rss.outputs.title }}: A new version of #candyshop has been released! ${{ on.rss.outputs.link }}"
+          STATUS_IMAGE_URL_1: https://user-images.githubusercontent.com/324683/95548273-b5a1e400-09d2-11eb-9c9e-16941c62c377.png
+  send-fb-post-with-media:
+    name: Publish new Candyshop versions
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: LuisAlejandro/send-fb-post-with-media@0.1.0
+        env:
+          FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
+          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
           STATUS_TEXT: "${{ on.rss.outputs.title }}: A new version of #candyshop has been released! ${{ on.rss.outputs.link }}"
           STATUS_IMAGE_URL_1: https://user-images.githubusercontent.com/324683/95548273-b5a1e400-09d2-11eb-9c9e-16941c62c377.png
