--- a/workflows/rss-luisalejandro.yml
+++ b/workflows/rss-luisalejandro.yml
@@ -4,19 +4,19 @@ on:
     config:
       active: false
 jobs:
-  lastpost:
-    name: Publish last post from blog
+  tweet-last-post-from-feed:
+    name: Tweet last post from blog
     runs-on: ubuntu-20.04
     steps:
-      - uses: LuisAlejandro/tweet-last-post-from-feed@0.2.0
+      - uses: LuisAlejandro/tweet-last-post-from-feed@0.2.2
         env:
           TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
           TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           TWITTER_OAUTH_TOKEN: ${{ secrets.TWITTER_OAUTH_TOKEN }}
           TWITTER_OAUTH_SECRET: ${{ secrets.TWITTER_OAUTH_SECRET }}
-          FEED_URL: https://hnrss.org/newest?points=300&count=3
-  randompost:
-    name: Publish random post from blog
+          FEED_URL: https://luisalejandro.org/blog/rss/feed.xml
+  tweet-random-post-from-feed:
+    name: Tweet random post from blog
     runs-on: ubuntu-20.04
     if: false
     steps:
@@ -26,4 +26,23 @@ jobs:
           TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           TWITTER_OAUTH_TOKEN: ${{ secrets.TWITTER_OAUTH_TOKEN }}
           TWITTER_OAUTH_SECRET: ${{ secrets.TWITTER_OAUTH_SECRET }}
-          FEED_URL: https://hnrss.org/newest?points=300&count=3
+          FEED_URL: https://luisalejandro.org/blog/rss/feed.xml
+  fb-last-post-from-feed:
+    name: Publish last post from blog
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: LuisAlejandro/fb-last-post-from-feed@0.2.0
+        env:
+          FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
+          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
+          FEED_URL: https://luisalejandro.org/blog/rss/feed.xml
+  fb-random-post-from-feed:
+    name: Publish random post from blog
+    runs-on: ubuntu-20.04
+    if: false
+    steps:
+      - uses: LuisAlejandro/fb-random-post-from-feed@0.2.0
+        env:
+          FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
+          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
+          FEED_URL: https://luisalejandro.org/blog/rss/feed.xml
