--- a/workflows/gist-movie-box.yml
+++ b/workflows/gist-movie-box.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - run: npm install
-      - uses: LuisAlejandro/movie-box@0.1.7
+      - uses: LuisAlejandro/movie-box@develop
         env:
           GH_TOKEN: ${{ secrets.GIST_PERSONAL_ACCESS_TOKEN }}
           GIST_ID: ${{ secrets.MOVIEBOX_GIST_ID }}
