`[REF]` Completing actionflows.

--- a/.github/workflows/actionsflow.yml
+++ b/.github/workflows/actionsflow.yml
@@ -1,7 +1,8 @@
 name: Actionsflow
+
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "*/15 * * * *"
   push:
     branches:
       - main
@@ -20,20 +21,24 @@ on:
         description: "--verbose: debug workflow, true or false"
         required: false
         default: "false"
+
 jobs:
   run:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     name: Run
     concurrency: actionsflow
     steps:
       - uses: actions/checkout@v2
+
       - name: Run Actionsflow
         uses: actionsflow/actionsflow-action@v1
         with:
           args: "build --include ${{ github.event.inputs.include || ''}} -f ${{github.event.inputs.force=='true' && 'true' || 'false'}} --verbose ${{github.event.inputs.verbose=='true' && 'true' || 'false'}}"
           json-secrets: ${{ toJSON(secrets) }}
           json-github: ${{ toJSON(github) }}
+
       - name: Setup act
         uses: actionsflow/setup-act-for-actionsflow@v1
+
       - name: Run act
         run: act --workflows ./dist/workflows --secret-file ./dist/.secrets --eventpath ./dist/event.json --env-file ./dist/.env -P ubuntu-latest=actionsflow/act-environment:v1 -P ubuntu-18.04=actionsflow/act-environment:v1
