--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,75 +13,67 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-20.04
-    if: github.repository == 'LuisAlejandro/actionsflow-workflow'
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+
       - name: Restoring node_modules cache
         uses: actions/cache@v3
         with:
-          path: 'node_modules'
+          path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('yarn.lock') }}
-      - name: Login to Github Docker Registry
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin
-      - name: Pulling docker cache
+
+      - name: Set environment variable
         run: |
-          GITHUB_REPOSITORY=$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')
-          docker pull docker.pkg.github.com/$GITHUB_REPOSITORY/actionsflowworkflow-build-cache || true
-      - name: Building image with cache
-        run: |
-          GITHUB_REPOSITORY=$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')
-          docker build . -t luisalejandro/actionsflow-workflow:latest --cache-from=docker.pkg.github.com/$GITHUB_REPOSITORY/actionsflowworkflow-build-cache
+          echo "UID=$(id -u)" >> $GITHUB_ENV
+          echo "GID=$(id -g)" >> $GITHUB_ENV
+          touch .env
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Building docker image
+        uses: docker/build-push-action@v3
+        with:
+            tags: luisalejandro/actionsflow-workflow:latest
+            file: Dockerfile
+            context: .
+            build-args: |
+                UID=${{ env.UID }}
+                GID=${{ env.GID }}
+            cache-from: type=gha
+            cache-to: type=gha,mode=max
+            push: false
+            load: true
+
       - name: Building project
         run: |
-          touch .env
-          sudo chown -R 1000:1000 .
           make dependencies build clean
-          sudo chown -R runner:docker .
-      - name: Pushing docker image
-        run: |
-          GITHUB_REPOSITORY=$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')
-          docker tag luisalejandro/actionsflow-workflow:latest docker.pkg.github.com/$GITHUB_REPOSITORY/actionsflowworkflow-build-cache
-          docker push docker.pkg.github.com/$GITHUB_REPOSITORY/actionsflowworkflow-build-cache || true
 
   approve:
     name: Approve pull request
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: build
+    if: github.actor == github.repository_owner || github.actor == 'dependabot[bot]'
     steps:
       - name: Approve
         uses: hmarr/auto-approve-action@v2.2.1
-        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
-          github-token: "${{ secrets.REPO_PERSONAL_ACCESS_TOKEN }}"
-      - name: Approve
-        uses: hmarr/auto-approve-action@v2.2.1
-        if: github.actor == 'LuisAlejandro'
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          github-token: "${{ github.actor == github.repository_owner && secrets.GITHUB_TOKEN || secrets.REPO_PERSONAL_ACCESS_TOKEN }}"
 
   merge:
     name: Merge pull request
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: approve
+    if: github.actor == github.repository_owner || github.actor == 'dependabot[bot]'
     steps:
       - name: Merge
         uses: actions/github-script@v6
-        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
-          github-token: "${{ secrets.REPO_PERSONAL_ACCESS_TOKEN }}"
-          script: |
-            await github.rest.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number
-            })
-      - name: Merge
-        uses: actions/github-script@v6
-        if: github.actor == 'LuisAlejandro'
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          github-token: "${{ github.actor == github.repository_owner && secrets.GITHUB_TOKEN || secrets.REPO_PERSONAL_ACCESS_TOKEN }}"
           script: |
             await github.rest.pulls.merge({
               owner: context.repo.owner,
