--- a/.gitignore
+++ b/.gitignore
@@ -244,7 +244,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+*.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
