--- a/workflows/gist-movie-box.yml
+++ b/workflows/gist-movie-box.yml
@@ -1,12 +1,10 @@
 on:
   script:
-    run: |
-      const crypto = require("crypto");
-      const id = crypto.randomBytes(16).toString("hex");
-      return [{id}]
+    every: 0 8 * * *
+
 jobs:
   moviebox:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: LuisAlejandro/movie-box@develop
         env:
