--- a/.github/workflows/gist-movie-box.yml
+++ b/.github/workflows/gist-movie-box.yml
@@ -1,10 +1,8 @@
+name: Update Movie Box gist
+
 on:
-  script:
-    run: |
-      const crypto = require("crypto");
-      const id = crypto.randomBytes(16).toString("hex");
-      return [{id}]
-    every: 0 8 * * *
+  schedule:
+    - cron: 0 8 * * *
 
 jobs:
   moviebox:
