--- a/.github/workflows/gist-music-box.yml
+++ b/.github/workflows/gist-music-box.yml
@@ -1,12 +1,9 @@
+name: Update Music Box gist
+
 on:
-  script:
-    run: |
-      const crypto = require("crypto");
-      const id = crypto.randomBytes(16).toString("hex");
-      return [{id}]
-    every: 0 8 * * *
-    config:
-      active: false
+  workflow_dispatch:
+  # schedule:
+  #   - cron: 0 8 * * *
 
 jobs:
   musicbox:
