--- a/.github/workflows/gist-waka-box.yml
+++ b/.github/workflows/gist-waka-box.yml
@@ -1,10 +1,9 @@
+name: Update Waka Box gist
+
 on:
-  script:
-    run: |
-      const crypto = require("crypto");
-      const id = crypto.randomBytes(16).toString("hex");
-      return [{id}]
-    every: 0 8 * * *
+  workflow_dispatch:
+  # schedule:
+  #   - cron: 0 8 * * *
 
 jobs:
   wakabox:
