--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -3,7 +3,7 @@ name: Keep scheduled workflows alive
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *"
+    - cron: 0 0 1 * *
 
 jobs:
   keepalive:
