--- a/.github/workflows/rss-lastfm-summary.yml
+++ b/.github/workflows/rss-lastfm-summary.yml
@@ -1,14 +1,12 @@
+name: Post LastFM summary to Twitter
+
 on:
-  script:
-    run: |
-      const crypto = require("crypto");
-      const id = crypto.randomBytes(16).toString("hex");
-      return [{id}]
-    every: 0 16 * * 5
+  workflow_dispatch:
+  # schedule:
+  #   - cron: 0 16 * * 5
 
 jobs:
   twitter-new-post:
-    name: LastFM summary to Twitter
     runs-on: ubuntu-22.04
     steps:
       - uses: LuisAlejandro/agoras-actions@1.1.1
