--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: luisalejandro/actionsflow-workflow:latest
+    image: luisalejandro/frontdesk:latest
     build:
       context: .
       dockerfile: Dockerfile
