`[REF]` Improving workflows.

--- a/.github/workflows/gist-waka-box.yml
+++ b/.github/workflows/gist-waka-box.yml
@@ -1,9 +1,8 @@
 name: Update Waka Box gist
 
 on:
-  workflow_dispatch:
-  # schedule:
-  #   - cron: 0 8 * * *
+  schedule:
+    - cron: 0 8 * * *
 
 jobs:
   wakabox:
