--- a/.github/workflows/gist-movie-box.yml
+++ b/.github/workflows/gist-movie-box.yml
@@ -1,9 +1,8 @@
 name: Update Movie Box gist
 
 on:
-  workflow_dispatch:
-  # schedule:
-  #   - cron: 0 8 * * *
+  schedule:
+    - cron: 0 8 * * *
 
 jobs:
   moviebox:
