--- a/.github/workflows/rss-agoras.yml
+++ b/.github/workflows/rss-agoras.yml
@@ -7,108 +7,88 @@ on:
 
 jobs:
   twitter-new-post:
-    name: New Agoras version to Twitter
+    name: New Agoras version
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Extracting last entry from feed
+        uses: ./
+        id: feed
         with:
-          node-version: '18'
-          cache: yarn
+          name: last-rss-entries-agoras
+          feed_url: https://github.com/LuisAlejandro/agoras/releases.atom
+          max_entries: 1
 
-      - name: Restoring node_modules cache
-        uses: actions/cache@v3
-        id: node-cache
+      - name: Setting variables
+        id: vars
+        run: |
+          title="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].title' )"
+          link="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].link' )"
+
+          if [ -z "$title" ] || [ -z "$link" ] || [ "$title" == "null" ] || [ "$link" == "null" ]; then
+            echo "publish=no" >> $GITHUB_OUTPUT
+          else
+            echo "title=$title" >> $GITHUB_OUTPUT
+            echo "link=$link" >> $GITHUB_OUTPUT
+            echo "publish=yes" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Posting to Twitter @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
+        id: twitter-post
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ runner.arch }}-${{ hashFiles('yarn.lock') }}
-          restore-keys: ${{ runner.os }}-node-modules-${{ runner.arch }}-
+          network: twitter
+          action: post
+          twitter-consumer-key: ${{ secrets.LD_TWITTER_CONSUMER_KEY }}
+          twitter-consumer-secret: ${{ secrets.LD_TWITTER_CONSUMER_SECRET }}
+          twitter-oauth-token: ${{ secrets.LD_TWITTER_OAUTH_TOKEN }}
+          twitter-oauth-secret: ${{ secrets.LD_TWITTER_OAUTH_SECRET }}
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #agoras has been released! ${{ steps.vars.outputs.link }}'
+          status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
 
-      - name: Restoring frontdesk cache
-        uses: actions/cache/restore@v3
-        id: frontdesk-cache
+      - name: Posting to Twitter @LuisAlejandro
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
-          path: .frontdesk
-          key: ${{ runner.os }}-frontdesk-${{ runner.arch }}
+          network: twitter
+          action: post
+          twitter-consumer-key: ${{ secrets.LA_TWITTER_CONSUMER_KEY }}
+          twitter-consumer-secret: ${{ secrets.LA_TWITTER_CONSUMER_SECRET }}
+          twitter-oauth-token: ${{ secrets.LA_TWITTER_OAUTH_TOKEN }}
+          twitter-oauth-secret: ${{ secrets.LA_TWITTER_OAUTH_SECRET }}
+          status-text: 'https://twitter.com/LuisDevelops/status/${{ steps.twitter-post.outputs.result }}'
 
-      - name: Generate Prime Numbers
-        if: steps.node-primes.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - uses: ./
-        id: rss
+      - name: Posting to Facebook @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
-          feed-url: https://github.com/LuisAlejandro/agoras/releases.atom
-          max-entries: 1
+          network: facebook
+          action: post
+          facebook-access-token: ${{ secrets.LD_FACEBOOK_ACCESS_TOKEN }}
+          facebook-object-id: ${{ secrets.LD_FACEBOOK_OBJECT_ID }}
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #agoras has been released! ${{ steps.vars.outputs.link }}'
+          status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
 
-      - run: echo "${{ steps.rss.outputs.result }}"
-
-      - name: Saving frontdesk cache
-        uses: actions/cache/save@v3
+      - name: Posting to LinkedIn /in/martinezfaneyth
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
-          path: .frontdesk
-          key: ${{ steps.frontdesk-cache.outputs.cache-primary-key }}
+          network: linkedin
+          action: post
+          linkedin-access-token: ${{ secrets.LA_LINKEDIN_ACCESS_TOKEN }}
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #agoras has been released! ${{ steps.vars.outputs.link }}'
+          status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
 
-  #     - uses: LuisAlejandro/agoras-actions@1.1.1
-  #       id: twitter-post
-  #       with:
-  #         network: twitter
-  #         action: post
-  #         twitter-consumer-key: ${{ secrets.LD_TWITTER_CONSUMER_KEY }}
-  #         twitter-consumer-secret: ${{ secrets.LD_TWITTER_CONSUMER_SECRET }}
-  #         twitter-oauth-token: ${{ secrets.LD_TWITTER_OAUTH_TOKEN }}
-  #         twitter-oauth-secret: ${{ secrets.LD_TWITTER_OAUTH_SECRET }}
-  #         status-text: "${{ on.rss.outputs.title }}: A new version of #agoras has been released! ${{ on.rss.outputs.link }}"
-  #         status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
-
-  #     - uses: LuisAlejandro/agoras-actions@1.1.1
-  #       with:
-  #         network: twitter
-  #         action: post
-  #         twitter-consumer-key: ${{ secrets.LA_TWITTER_CONSUMER_KEY }}
-  #         twitter-consumer-secret: ${{ secrets.LA_TWITTER_CONSUMER_SECRET }}
-  #         twitter-oauth-token: ${{ secrets.LA_TWITTER_OAUTH_TOKEN }}
-  #         twitter-oauth-secret: ${{ secrets.LA_TWITTER_OAUTH_SECRET }}
-  #         status-text: "https://twitter.com/LuisDevelops/status/${{ steps.twitter-post.outputs.result }}"
-
-  # facebook-page-new-post:
-  #   name: New Agoras version to Facebook
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - uses: LuisAlejandro/agoras-actions@1.1.1
-  #       id: facebook-post
-  #       with:
-  #         network: facebook
-  #         action: post
-  #         facebook-access-token: ${{ secrets.LD_FACEBOOK_ACCESS_TOKEN }}
-  #         facebook-object-id: ${{ secrets.LD_FACEBOOK_OBJECT_ID }}
-  #         status-text: "${{ on.rss.outputs.title }}: A new version of #agoras has been released! ${{ on.rss.outputs.link }}"
-  #         status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
-
-  # linkedin-page-new-post:
-  #   name: New Agoras version to LinkedIn
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - uses: LuisAlejandro/agoras-actions@1.1.1
-  #       id: linkedin-post
-  #       with:
-  #         network: linkedin
-  #         action: post
-  #         linkedin-access-token: ${{ secrets.LA_LINKEDIN_ACCESS_TOKEN }}
-  #         status-text: "${{ on.rss.outputs.title }}: A new version of #agoras has been released! ${{ on.rss.outputs.link }}"
-  #         status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
-
-  # instagram-page-new-post:
-  #   name: New Agoras version to LinkedIn
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - uses: LuisAlejandro/agoras-actions@1.1.1
-  #       with:
-  #         network: instagram
-  #         action: post
-  #         instagram-access-token: ${{ secrets.LD_INSTAGRAM_ACCESS_TOKEN }}
-  #         instagram-object-id: ${{ secrets.LD_INSTAGRAM_OBJECT_ID }}
-  #         status-text: "${{ on.rss.outputs.title }}: A new version of #agoras has been released! ${{ on.rss.outputs.link }}"
-  #         status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
+      - name: Posting to Instagram @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
+        with:
+          network: instagram
+          action: post
+          instagram-access-token: ${{ secrets.LD_INSTAGRAM_ACCESS_TOKEN }}
+          instagram-object-id: ${{ secrets.LD_INSTAGRAM_OBJECT_ID }}
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #agoras has been released! ${{ steps.vars.outputs.link }}'
+          status-image-url-1: https://repository-images.githubusercontent.com/496808130/7aeca3c5-a610-4707-8c47-f2867af04a7d
