--- a/.github/workflows/rss-dockershelf.yml
+++ b/.github/workflows/rss-dockershelf.yml
@@ -1,9 +1,3 @@
-# on:
-#   rss:
-#     url: https://github.com/Dockershelf/dockershelf/releases.atom
-#     config:
-#       limit: 1
-
 name: Post new Dockershelf version to social networks
 
 on:
@@ -13,10 +7,37 @@ on:
 
 jobs:
   twitter-new-post:
-    name: New Dockershelf version to Twitter
+    name: New Dockershelf version
     runs-on: ubuntu-22.04
     steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Extracting last entry from feed
+        uses: ./
+        id: feed
+        with:
+          name: last-rss-entries-dockershelf
+          feed_url: https://github.com/Dockershelf/dockershelf/releases.atom
+          max_entries: 1
+
+      - name: Setting variables
+        id: vars
+        run: |
+          title="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].title' )"
+          link="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].link' )"
+
+          if [ -z "$title" ] || [ -z "$link" ] || [ "$title" == "null" ] || [ "$link" == "null" ]; then
+            echo "publish=no" >> $GITHUB_OUTPUT
+          else
+            echo "title=$title" >> $GITHUB_OUTPUT
+            echo "link=$link" >> $GITHUB_OUTPUT
+            echo "publish=yes" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Posting to Twitter @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         id: twitter-post
         with:
           network: twitter
@@ -25,10 +46,12 @@ jobs:
           twitter-consumer-secret: ${{ secrets.LD_TWITTER_CONSUMER_SECRET }}
           twitter-oauth-token: ${{ secrets.LD_TWITTER_OAUTH_TOKEN }}
           twitter-oauth-secret: ${{ secrets.LD_TWITTER_OAUTH_SECRET }}
-          status-text: "${{ on.rss.outputs.title }}: A new version of #dockershelf has been released! ${{ on.rss.outputs.link }}"
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
           status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
 
-      - uses: LuisAlejandro/agoras-actions@1.1.1
+      - name: Posting to Twitter @LuisAlejandro
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: twitter
           action: post
@@ -36,47 +59,36 @@ jobs:
           twitter-consumer-secret: ${{ secrets.LA_TWITTER_CONSUMER_SECRET }}
           twitter-oauth-token: ${{ secrets.LA_TWITTER_OAUTH_TOKEN }}
           twitter-oauth-secret: ${{ secrets.LA_TWITTER_OAUTH_SECRET }}
-          status-text: "https://twitter.com/LuisDevelops/status/${{ steps.twitter-post.outputs.result }}"
+          status-text: 'https://twitter.com/LuisDevelops/status/${{ steps.twitter-post.outputs.result }}'
 
-
-  facebook-page-new-post:
-    name: New Dockershelf version to Facebook
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
-        id: facebook-post
+      - name: Posting to Facebook @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: facebook
           action: post
           facebook-access-token: ${{ secrets.LD_FACEBOOK_ACCESS_TOKEN }}
           facebook-object-id: ${{ secrets.LD_FACEBOOK_OBJECT_ID }}
-          status-text: "${{ on.rss.outputs.title }}: A new version of #dockershelf has been released! ${{ on.rss.outputs.link }}"
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
           status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
 
-
-  linkedin-page-new-post:
-    name: New Dockershelf version to LinkedIn
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
-        id: linkedin-post
+      - name: Posting to LinkedIn /in/martinezfaneyth
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: linkedin
           action: post
           linkedin-access-token: ${{ secrets.LA_LINKEDIN_ACCESS_TOKEN }}
-          status-text: "${{ on.rss.outputs.title }}: A new version of #dockershelf has been released! ${{ on.rss.outputs.link }}"
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
           status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
 
-
-  instagram-page-new-post:
-    name: New Dockershelf version to LinkedIn
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
+      - name: Posting to Instagram @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: instagram
           action: post
           instagram-access-token: ${{ secrets.LD_INSTAGRAM_ACCESS_TOKEN }}
           instagram-object-id: ${{ secrets.LD_INSTAGRAM_OBJECT_ID }}
-          status-text: "${{ on.rss.outputs.title }}: A new version of #dockershelf has been released! ${{ on.rss.outputs.link }}"
+          status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
           status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
