--- a/.github/workflows/rss-luisalejandro-last-post.yml
+++ b/.github/workflows/rss-luisalejandro-last-post.yml
@@ -1,9 +1,3 @@
-# on:
-#   rss:
-#     url: https://luisalejandro.org/blog/posts/feed.xml
-#     config:
-#       limit: 1
-
 name: Post new blog post to social networks
 
 on:
@@ -13,10 +7,42 @@ on:
 
 jobs:
   twitter-new-post:
-    name: New blog post to Twitter
+    name: Nuevo artículo
     runs-on: ubuntu-22.04
     steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Extracting last entry from feed
+        uses: ./
+        id: feed
+        with:
+          name: last-rss-entries-luisalejandro
+          feed_url: https://luisalejandro.org/blog/posts/feed.xml
+          max_entries: 1
+
+      - name: Setting variables
+        id: vars
+        run: |
+          title="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].title' )"
+          link="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].link' )"
+          image="$( echo '${{ steps.feed.outputs.result }}' | jq -r '.[0].enclosure.url' )"
+
+          if [ -n "$image" ] && [ "$image" != "null" ]; then
+            echo "image=$image" >> $GITHUB_OUTPUT
+          fi
+
+          if [ -z "$title" ] || [ -z "$link" ] || [ "$title" == "null" ] || [ "$link" == "null" ]; then
+            echo "publish=no" >> $GITHUB_OUTPUT
+          else
+            echo "title=$title" >> $GITHUB_OUTPUT
+            echo "link=$link" >> $GITHUB_OUTPUT
+            echo "publish=yes" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Posting to Twitter @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         id: twitter-post
         with:
           network: twitter
@@ -25,9 +51,11 @@ jobs:
           twitter-consumer-secret: ${{ secrets.LD_TWITTER_CONSUMER_SECRET }}
           twitter-oauth-token: ${{ secrets.LD_TWITTER_OAUTH_TOKEN }}
           twitter-oauth-secret: ${{ secrets.LD_TWITTER_OAUTH_SECRET }}
-          status-text: "New blog post: ${{ on.rss.outputs.title }} ${{ on.rss.outputs.link }}"
+          status-text: "Nuevo artículo: ${{ steps.vars.outputs.title }} ${{ steps.vars.outputs.link }}"
 
-      - uses: LuisAlejandro/agoras-actions@1.1.1
+      - name: Posting to Twitter @LuisAlejandro
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: twitter
           action: post
@@ -38,41 +66,33 @@ jobs:
           status-text: "https://twitter.com/LuisDevelops/status/${{ steps.twitter-post.outputs.result }}"
 
 
-  facebook-page-new-post:
-    name: New blog post to Facebook
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
-        id: facebook-post
+      - name: Posting to Facebook @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: facebook
           action: post
           facebook-access-token: ${{ secrets.LD_FACEBOOK_ACCESS_TOKEN }}
           facebook-object-id: ${{ secrets.LD_FACEBOOK_OBJECT_ID }}
-          status-text: "New blog post: ${{ on.rss.outputs.title }} ${{ on.rss.outputs.link }}"
+          status-text: "Nuevo artículo: ${{ steps.vars.outputs.title }} ${{ steps.vars.outputs.link }}"
 
 
-  linkedin-page-new-post:
-    name: New blog post to LinkedIn
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
-        id: linkedin-post
+      - name: Posting to LinkedIn /in/martinezfaneyth
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: linkedin
           action: post
           linkedin-access-token: ${{ secrets.LA_LINKEDIN_ACCESS_TOKEN }}
-          status-text: "New blog post: ${{ on.rss.outputs.title }} ${{ on.rss.outputs.link }}"
+          status-text: "Nuevo artículo: ${{ steps.vars.outputs.title }} ${{ steps.vars.outputs.link }}"
 
-
-  instagram-page-new-post:
-    name: New blog post to LinkedIn
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: LuisAlejandro/agoras-actions@1.1.1
+      - name: Posting to Instagram @LuisDevelops
+        uses: LuisAlejandro/agoras-actions@1.1.2
+        if: steps.vars.outputs.publish == 'yes'
         with:
           network: instagram
           action: post
           instagram-access-token: ${{ secrets.LD_INSTAGRAM_ACCESS_TOKEN }}
           instagram-object-id: ${{ secrets.LD_INSTAGRAM_OBJECT_ID }}
-          status-text: "New blog post: ${{ on.rss.outputs.title }} ${{ on.rss.outputs.link }}"
+          status-text: "Nuevo artículo: ${{ steps.vars.outputs.title }} ${{ steps.vars.outputs.link }}"
+          status-image-url-1: ${{ steps.vars.outputs.image }}
