--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@actions/core": "^1.10.0",
     "@extractus/feed-extractor": "^7.0.5",
     "cache-manager": "^5.2.3",
-    "cache-manager-fs-hash": "^1.0.0"
+    "cache-manager-fs-hash": "^1.0.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/cache-manager-fs-hash": "^0.0.1",
     "@types/node": "^18",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "last-rss-entries": "ts-node src/index.ts"
+    "last-rss-entries": "tsc && node -r dotenv/config dist/index.js"
   }
 }
