--- a/.github/workflows/rss-luisalejandro-last-post.yml
+++ b/.github/workflows/rss-luisalejandro-last-post.yml
@@ -2,8 +2,8 @@ name: Post new blog post to social networks
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: 0 * * * *
+  schedule:
+    - cron: 0 * * * *
 
 jobs:
   twitter-new-post:
