`[REF]` Adjusting schedule to be less frequent.

--- a/.github/workflows/rss-dockershelf.yml
+++ b/.github/workflows/rss-dockershelf.yml
@@ -3,7 +3,7 @@ name: Post new Dockershelf version to social networks
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 * * * *
+    - cron: 0 7,12,18 * * *
 
 jobs:
   twitter-new-post:
