--- a/.github/workflows/rss-agoras.yml
+++ b/.github/workflows/rss-agoras.yml
@@ -3,7 +3,7 @@ name: Post new Agoras version to social networks
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 * * * *
+    - cron: 0 7,12,18 * * *
 
 jobs:
   twitter-new-post:
