--- a/.github/workflows/rss-luisalejandro-last-post.yml
+++ b/.github/workflows/rss-luisalejandro-last-post.yml
@@ -3,7 +3,7 @@ name: Post new blog post to social networks
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 * * * *
+    - cron: 0 7,12,18 * * *
 
 jobs:
   twitter-new-post:
