--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@extractus/feed-extractor": "^7.0.5",
+    "axios": "^1.6.2",
     "cache-manager": "^5.2.3",
     "cache-manager-fs-hash": "^1.0.0",
     "dotenv": "^16.3.1"
