--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@cosmicjs/sdk": "^1.2.0",
     "@extractus/feed-extractor": "^7.0.5",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.3",
     "cache-manager-fs-hash": "^1.0.0",
-    "dotenv": "^16.3.1"
+    "cryptr": "^6.3.0",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@types/node": "^18",
